# cgrep

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  style.md
include/: discovery.h  list.h  matcher.h  output.h  raii.h  worker.h
scripts/: verify.sh
src/: discovery.c  main.c  matcher.c  output.c  worker.c
tests/integration/: test_cli.py
tests/unit/: test_queue.c
